Corrected visual style on mobile

--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -61,14 +61,17 @@ nav
   .trimester-panel-body
     padding: 0
 
-  .bachelor-item
-    padding: 3px
-    border: none
+  .bachelor-list
+    margin-bottom: 0
 
-    .bachelor-btn
-      display: block
-      width: 100%
-      padding: 5px
+    .bachelor-item
+      padding: 3px
+      border: none
+
+      .bachelor-btn
+        display: block
+        width: 100%
+        padding: 5px
 
 .filters
   .panel-body
